fixed services card content cutting off on smaller screens

--- a/src/services.css
+++ b/src/services.css
@@ -32,12 +32,14 @@
     height: 600px;
     margin: 12px;
     margin-top: 48px;
+    margin-bottom: 12px;
+    min-height: 600px;
     min-width: 280px;
     opacity: 0;
     overflow: hidden;
     position: relative;
     transform: scale(1);
-    transition: opacity 2s, transform 1s;
+    transition: opacity 2s, transform 1s, height 0.3s;
     width: calc(100vw / 3);
 }
 
@@ -82,6 +84,7 @@
 
 .services-card-content-container {
     height: 90%;
+    overflow: hidden;
 }
 
 .services-card-content li {
@@ -169,12 +172,28 @@
     width: 16px;
 }
 
+@media screen and (max-width: 1300px) {
+    .services-card {
+        height: 610px;
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    .services-card {
+        height: 660px;
+    }
+}
+
 @media screen and (max-width: 1000px) {
     #our-services {
         margin-bottom: 0;
         margin-top: 0;
         max-height: none;
         padding-top: 20px;
+    }
+
+    .services-cta {
+        padding: 16px;
     }
 
     .cards-container {
@@ -190,6 +209,7 @@
         margin-top: 64px;
         max-width: 400px;
         width: 100vw;
+        height: 600px;
     }
 
     .services-card:first-child {
